# MyPet01

./: .dockerignore  .env.development  .env.docker.example  .env.example  .gitignore  .replit  BTN_PRIMARY_PLAN.md  CSS_CONSOLIDATION_PLAN.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  IMPROVEMENT_PLAN.md  MIXIN_CONSOLIDATION_PLAN.md  README.md  REFACTORING_PLAN.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  main.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.md
.github/workflows/: ci-cd.yml  ci.yml
ansible/: ansible.cfg  inventory.ini  site.yml  vault.yml.example
ansible/group_vars/: all.yml  backup.yml  management.yml  prod.yml
attached_assets/: Pasted--mypet01-py3-14-PS-D-Projects-MyPet01-docker-compose-up_1770326031827.txt  Pasted--mypet01-py3-14-PS-D-Projects-MyPet01-docker-compose-up_1770327119557.txt  Pasted--mypet01-py3-14-PS-D-Projects-MyPet01-pytest--177031833_1770318334551.txt  Pasted--mypet01-py3-14-PS-D-Projects-MyPet01-python-manage-py-_1770043364613.txt  Pasted--workspace-poetry-run-pytest--1769447525032_1769447525033.txt  Pasted--workspace-poetry-run-pytest-tb-short--1770109596201_1770109596202.txt  Pasted--workspace-poetry-run-pytest-tb-short--1770109980990_1770109980991.txt  Pasted--workspace-poetry-run-pytest-tb-short--1770110245382_1770110245383.txt  Pasted--workspace-poetry-run-pytest-tb-short--1770118601412_1770118601413.txt  Pasted--workspace-poetry-run-pytest-tb-short--1770123546713_1770123546714.txt  Pasted--workspace-poetry-run-pytest-tb-short--1770124255730_1770124255730.txt  Pasted--workspace-poetry-run-pytest-test--1770761280151_1770761280152.txt  Pasted-2s-Run-BRANCH-NAME-GITHUB-REF-refs-heads-BRANCH-NAME-GI_1770704173263.txt  Pasted-ModuleNotFoundError-at-No-module-named-redis-Request-Me_1770754437882.txt  Pasted-Performing-system-checks-System-check-identified-no-iss_1769005797788.txt  Pasted-System-check-identified-no-issues-0-silenced-January-21_1769005024358.txt  Pasted-Waiting-for-services-to-start-Attempt-1-12-failed-retry_1770697798418.txt  Pasted-mypet-project-tests-test-config-py-55-AssertionError--1_1770810707511.txt  Pasted-root-vdska-docker-exec-blog-certbot-1-certbot-certifica_1770822303921.txt  Pasted-root-vdska-docker-ps-certbot-docker-ps-a--1770822247199_1770822247199.txt  Pasted-root-vdska-opt-blog-STAGING-0-init-letsencrypt-sh-auto-_1770771939279.txt  Pasted-root-vdska-opt-blog-docker-compose-f-docker-compose-pro_1770773155388.txt  Pasted-root-vdska-opt-blog-preprod-curl-v-k-b-sessionid-2sle9w_1770764740665.txt  Pasted-root-vdska-opt-blog-preprod-curl-v-k-resolve-site-mine-_1770765207061.txt  Pasted-root-vdska-opt-blog-preprod-docker-compose-f-docker-com_1770738302460.txt  Pasted-root-vdska-opt-blog-preprod-docker-compose-f-docker-com_1770739170711.txt  Pasted-root-vdska-opt-blog-preprod-docker-compose-f-docker-com_1770763080360.txt  Pasted-root-vdska-opt-blog-preprod-docker-compose-f-docker-com_1770763139946.txt  Pasted-root-vdska-opt-blog-preprod-docker-compose-f-docker-com_1770763858962.txt  Pasted-root-vdska-opt-blog-preprod-docker-compose-f-docker-com_1770764405666.txt  Pasted-root-vdska-opt-blog-preprod-docker-compose-f-docker-com_1770764577897.txt  Pasted-root-vdska-opt-blog-preprod-docker-compose-f-docker-com_1770765039106.txt  Pasted-ssh-o-StrictHostKeyChecking-no-EOFDEPS-set-e-echo-Check_1770742270228.txt
blog/: admin.py  apps.py  cache.py  forms.py  models.py  services.py  signals.py  sitemaps.py  urls.py  utils.py  views.py
blog/fixtures/: demo_content.json  initial_structure.json
blog/migrations/: 0001_initial.py  0001_squashed_initial.py  0002_comment_updated_at_post_updated_at_video_created_at_and_more.py  0003_alter_comment_created_at_alter_post_created_at_and_more.py  0004_alter_video_options_video_category_video_duration_and_more.py  0005_rename_video_to_content.py  0006_add_tags.py  0007_add_category_model.py  0008_remove_applies_to_all.py  0009_add_tag_order.py  0010_add_content_type_model.py  0010_change_category_to_categories.py  0011_add_photo_file.py  0011_content_types_m2m.py  0012_remove_contenttype_slug.py  0013_make_code_blank.py  0014_make_code_required.py  0015_content_type_fk.py  0016_remove_category_slug.py  0017_remove_tag_slugs.py  0018_content_categories_m2m.py  0019_remove_content_duration.py  0020_content_blog_conten_created_52a246_idx.py  0021_add_pg_trgm_extension.py  0022_add_updated_at_index.py
blog/templatetags/: blog_filters.py
blog/tests/: conftest.py  test_admin.py  test_cache.py  test_content_views.py  test_csp.py  (+12 more)
core/: context_processors.py  middleware.py  mixins.py  models.py  security.py
deploy/: .env.production.example  blog.service  gunicorn.conf.py  mypet.service  nginx.conf  renew-certs.sh
docs/: 2do.md  CI_CD.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  DEPLOY_CHECKLIST.md  DEPUSER_SETUP.md  FromDeep.md  GITHUB_SECRETS.md  HAPROXY_SECURITY.md  LOCAL_DEVELOPMENT.md  PROJECT_REFERENCE.md  S3_MIGRATION_PLAN.md  TESTING.md  VPS_AND_SECRETS.md  roadmap.md
haproxy/: auto-ban.sh  haproxy.cfg  update-geoip.sh
mypet_project/: config.py  settings.py  urls.py  wsgi.py
nginx/: docker-entrypoint.sh  nginx.conf
scripts/: backup.py  cron-geoip-update.sh  generate-preprod-env.sh  generate-production-env.sh  init-letsencrypt.sh  setup_vps.sh  update-geoip.sh
static/: robots.txt
temp_docs/: CI_CD.md  DEPLOYMENT_STRATEGY.md  DOCKER_SETUP.md  GITHUB_SECRETS.md  QUICK_START_TESTING.md  STAGING_TESTING.md
templates/: base.html
tests/: test_example.py  utils_files.py
users/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
(+99 files in other folders)
